se agrega vista de evluacion de grupo. Hay que arreglar url al momento de eliminar y agregar evaluadores. Hay que agregar la rubrica en la vista de detalle. Hay que centrar los evaluadores, y agregar el if del admin

--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -111,10 +111,11 @@
                         {% for grupo in grupos %}
                             <tr>
                                 <td class="w3-center" style="vertical-align:middle">{{grupo.numero}}
+                                <td class="w3-center"style="vertical-align:middle">{{ grupo.nombre }}</td>
                                     {% if evaluacion.is_active%}
                                     <td class="w3-light-gray w3-center">
-                                        <a href="{% url 'evaluaciones:evaluar' grupo.get_pk %}" class="w3-button w3-red w3-round">
-                                    <strong>Evaluar</strong></a>
+                                        <a href="{% url 'evaluaciones:evaluar' grupo.get_pk evaluacion.get_pk %}" class="w3-button w3-red w3-round">
+                                    <strong>Seleccionar</strong></a>
                                     </td>
                                     {% endif %}
                                 </td>
