--- a/templates/evaluacion/evaluacion_evaluar.html
+++ b/templates/evaluacion/evaluacion_evaluar.html
@@ -7,10 +7,10 @@
         <h1 class="w3-xxxlarge w3-text-red"><b>Evaluación <i class="w3-text-green">en curso</i> </b></h1>
         <hr style="width:50px;border:5px solid red" class="w3-round">
         <div class="w3-container w3-center">
-            <p><b>{{ grupo.nombre }}</b> Nombre evaluacion <i>/ {{ grupo.curso }}</i></p>
+            <h3><p><b>{{ grupo.nombre }}</b> {{ evaluacion.nombre }} <i>/ {{ grupo.curso }}</i></p></h3>
             </div>
 
-        <div id='evaluadores' class="w3-panel  w3-margin-bottom">
+ {% comment %}       <div id='evaluadores' class="w3-panel  w3-margin-bottom">
         <ul class="w3-ul w3-light-grey w3-center w3-card-4">
             <li class="w3-dark-grey w3-xlarge w3-padding-32">Evaluadores <i class="fas fa-user-tie"></i> </li>
             <li class="w3-padding-16"> Evaluador 1 <i style="margin-left: 10px" class="w3-large fas fa-times"></i>
@@ -58,7 +58,7 @@
                     onclick="checkBeforeSend()"><i class="fas fa-envelope-open-text"></i> Entregar
                 evaluación
             </button>
-        </div>
+        </div>{% endcomment %}
         
 
     </div>
