--- a/templates/evaluacion/evaluacion_detalle.html
+++ b/templates/evaluacion/evaluacion_detalle.html
@@ -132,8 +132,8 @@
     <script> var is_admin = ('True'=='{{ user|is_admin }}'); </script>
 
     <!--Rubrica asociada-->
-    <div id="rubrica-detalle" class="w3-modal">
-        <div class="w3-modal-content w3-round-large w3-card-4 w3-animate-zoom" style="width:80%">
+    <div id="rubrica-detalle" class="w3-margin-top w3-center">
+        <div class="w3-center w3-card-4">
             <div class="w3-center w3-container">
                 <div class="w3-display-container">
                 <div class="w3-container w3-xlarge {% if user|is_admin %} opcion {% endif %}" style="font-weight: bold" {% if user|is_admin %} contenteditable="true" {% endif %}   id='new-nombre'></div>
