--- a/templates/cursos/curso_detalle.html
+++ b/templates/cursos/curso_detalle.html
@@ -228,8 +228,8 @@
     </div>
 
     <!-- Grupos -->
-    <div class="w3-half w3-container">
-            <div class="w3-card-4 w3-margin-left">
+    <div class="w3-half w3-container w3-padding">
+            <div class="w3-card-4">
                 <div class="w3-container w3-red">
                     <h5><b>Grupos</b></h5>
                 </div>
@@ -335,6 +335,10 @@
                 <form class="w3-container" action="{% url 'cursos:update_grupo' curso.pk %}" method="post">
                     {% csrf_token %}
                     <table class="w3-table">
+                        <tr class="w3-hide">
+                        <td><b>ID:</b></td>
+                        <td>{{ update_grupo.ID }}</td>
+                        </tr>
                         <tr>
                             <td><b>Nombre del grupo:</b></td>
                             <td>{{ update_grupo.Nombre}}</td>
@@ -344,7 +348,6 @@
                             <td>{{ update_grupo.Activo }}</td>
                         </tr>
                     </table>
-
                     <button class="w3-button w3-block w3-round w3-red w3-section w3-padding w3-hover-light-green"
                             type="submit">Guardar cambios
                     </button>
