--- a/templates/evaluacion/evaluacion_evaluar.html
+++ b/templates/evaluacion/evaluacion_evaluar.html
@@ -10,7 +10,7 @@
             <h3><p><b>{{ grupo.nombre }}</b> {{ evaluacion.nombre }} <i>/ {{ grupo.curso }}</i></p></h3>
             </div>
 
- {% comment %}       <div id='evaluadores' class="w3-panel  w3-margin-bottom">
+      <div id='evaluadores' class="w3-panel  w3-margin-bottom">
         <ul class="w3-ul w3-light-grey w3-center w3-card-4">
             <li class="w3-dark-grey w3-xlarge w3-padding-32">Evaluadores <i class="fas fa-user-tie"></i> </li>
             <li class="w3-padding-16"> Evaluador 1 <i style="margin-left: 10px" class="w3-large fas fa-times"></i>
@@ -58,7 +58,7 @@
                     onclick="checkBeforeSend()"><i class="fas fa-envelope-open-text"></i> Entregar
                 evaluación
             </button>
-        </div>{% endcomment %}
+        </div>
         
 
     </div>
